Fix JSON parsing, add MySQL connector, update ConnectionPool, and adjust main execution flow

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
     </properties>
 
     <dependencies>
-        <!-- JAXB -->
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
@@ -33,7 +32,6 @@
             <version>${jaxb.version}</version>
         </dependency>
 
-        <!-- Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -45,7 +43,6 @@
             <version>${jackson.version}</version>
         </dependency>
 
-        <!-- JSONPath -->
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
@@ -82,6 +79,13 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
     </dependencies>
 
     <build>
