--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <slf4j.version>2.0.13</slf4j.version>
         <exec.plugin.version>3.4.1</exec.plugin.version>
         <compiler.plugin.version>3.13.0</compiler.plugin.version>
+
+        <mybatis.version>3.5.16</mybatis.version>
     </properties>
 
     <dependencies>
@@ -84,6 +86,12 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
         </dependency>
 
     </dependencies>
